--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,38 +1,16 @@
 <html>
     <head>
         <title>Chat</title>
-        <script src="/socket.io/socket.io.js"></script>
-        <script>
-            var socket = io();
-            function msg(){
-                var form = document.getElementById('form');
-                socket.emit('chat message', form.elements[0].value);
-                form.elements[0].value = '';
-                return false
-            }
-            socket.on('chat message', function(msg){
-                var chats = document.getElementById('chats');
-                chats.innerHTML += `<li>${msg}</li>`
-            })
-            socket.on('disconnect', function(msg){
-                var chats = document.getElementById('chats');
-                var elem = document.createElement('LI');
-                var message = document.createTextNode(msg);
-                elem.appendChild(message);
-                chats.appendChild(elem)
-            })
-        </script>
     </head>
     <body>
         <h1>Chat</h1>
-        <ul id="chats">
-            <%for(var i = 0; i < messages.length; i++){%>
-                <li><%=messages[i].author%>: <%=messages[i].message%></li>
+        <div id="chats">
+            <%for(let i = 0; i < messages.length; i++){%>
+                <p><%=messages[i].author%>: <%=messages[i].message%></p>
             <%}%>
-        </ul>
-        <form action="" onsubmit="return msg()" id="form">
-            <input type="text" name="chat" id="chat">
-            <input type="submit" value="Send">
-        </form>
+        </div>
+        <input type="text" name="chat" id="chat" autocomplete="off">
+        <button onclick="msg()">Send</button>
+        <script src="sockets.js"></script>
     </body>
 </html>
