--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,13 +4,7 @@
     </head>
     <body>
         <h1>Chat</h1>
-        <div id="chats">
-            <%for(let i = 0; i < messages.length; i++){%>
-                <p><%=messages[i].author%>: <%=messages[i].message%></p>
-            <%}%>
-        </div>
-        <input type="text" name="chat" id="chat" autocomplete="off">
-        <button onclick="msg()">Send</button>
-        <script src="sockets.js"></script>
+        <a href="/login">Login</a>
+        <a href="/signup">Signup</a>
     </body>
 </html>
